[package]
name = "bpf"
version = "0.1.4"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Attach BPF filters"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bpf"
repository = "https://github.com/jedisct1/rust-bpf"
categories = ["os::unix-apis"]
edition = "2021"

[dependencies]
libc = "0.2.147"
